--- a/design/index.css
+++ b/design/index.css
@@ -1,11 +1,8 @@
-/* ROOT */
-
 :root {
     /* Colors */
     --header-color: #ffffff;
     --main-color: #d0fdd7;
     --footer-color: #2a8c4a;
-
     --primary-color: #64c27b;
     --secondary-color: #9bfab0;
 }
@@ -15,7 +12,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .body {
@@ -23,47 +20,3 @@
     height: 100vh;
     width: 100vw;
 }
-
-/* ROOT */
-
-
-/* HEADER */
-
-.haeder {
-    background-color: var(--header-color);
-    width: 100%;
-    height: 8%;
-}
-
-/* HEADER */
-
-
-/* MAIN */
-
-.main {
-    background-color: var(--main-color);
-    width: 100%;
-    height: 86%;
-}
-
-/* HEADER */
-
-
-/* FOOTER */
-
-.footer {
-    display: flex;
-    background-color: var(--footer-color);
-    width: 100%;
-    height: 6%;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer__p {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: var(--header-color);
-}
-
-/* FOOTER */
