--- a/design/cross-components/main-component/main-component.css
+++ b/design/cross-components/main-component/main-component.css
@@ -46,26 +46,11 @@
     border-bottom: 1px solid var(--header-color);
 }
 
-.filter {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 75%;
-    align-items: center;
-    justify-content: center;
-}
-
 .main__content--data {
     display: flex;
     width: 100%;
     height: 75%;
     /* border: 2px solid red; */
-}
-
-@media screen and (min-width: 720px) {
-    .filter {
-        flex-direction: row;
-    }
 }
 
 @media screen and (min-width: 1080px) {
@@ -75,16 +60,29 @@
     }
 
     .main__content--filter {
-        width: 25%;
+        width: 20%;
         height: 50%;
     }
 
-    .filter {
-        flex-direction: column;
+    .main__content--data {
+        width: 80%;
+        height: 100%;
+    }
+}
+
+@media screen and (min-width: 2560px) {
+    .main__content {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .main__content--filter {
+        width: 15%;
+        height: 30%;
     }
 
     .main__content--data {
-        width: 75%;
+        width: 85%;
         height: 100%;
     }
 }
