--- a/design/cross-components/header/header.css
+++ b/design/cross-components/header/header.css
@@ -1,6 +1,6 @@
 .haeder {
     display: flex;
-    background-color: var(--header-color);
+    background-color: var(--footer-color);
     width: 100%;
     height: 8%;
     padding: 0em 0.8em;
@@ -14,44 +14,44 @@
     height: 90%;
     padding: 0;
     margin: 0;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 .logo__image {
     display: flex;
-    width: 50%;
+    width: 30%;
     height: 100%;
+    font-size: 2.7em;
+    color: var(--main-color);
     justify-content: center;
     align-items: center;
 }
 
 .logo__label {
-    font-size: 1.3em;
+    font-size: 1.8em;
     font-weight: bolder;
-    color: var(--primary-color);
+    color: var(--main-color);
 }
 
 .header__button--menu {
     display: block;
     font-size: 3em;
-    background-color: var(--primary-color);
-    border: 1.5px solid var(--primary-color);
-    color: var(--header-color);
+    background-color: var(--footer-color);
+    border: none;
+    color: var(--main-color);
     border-radius: 100%;
     transition-duration: 0.3s;
 }
 
 .header__button--menu:active {
-    background-color: var(--footer-color);
-    border: 1.5px solid var(--primary-color);
-    color: var(--main-color);
+    background-color: var(--header-color);
+    color: var(--primary-color);
 }
 
 .header__button--menu:hover {
-    background-color: var(--footer-color);
-    border: 1.5px solid var(--primary-color);
-    color: var(--main-color);
+    background-color: var(--header-color);
+    color: var(--primary-color);
 }
 
 .nav {
@@ -62,7 +62,7 @@
     height: 40%;
     top: 0;
     left: 0;
-    background-color: var(--header-color);
+    background-color: var(--footer-color);
     align-items: center;
 }
 
@@ -71,7 +71,7 @@
     width: 100%;
     height: 20%;
     padding: 0em 1em;
-    border-bottom: 3px solid var(--main-color);
+    border-bottom: 3px solid var(--primary-color);
     justify-content: flex-end;
     align-items: center;
 }
@@ -79,9 +79,9 @@
 .nav__button--close {
     display: block;
     font-size: 2em;
-    background-color: var(--header-color);
+    background-color: transparent;
     border: none;
-    color: var(--primary-color);
+    color: var(--header-color);
     transition-duration: 0.3s;
 }
 
@@ -102,12 +102,34 @@
 
 .nav__ul--link {
     text-decoration: none;
-    color: var(--primary-color);
-    background-color: var(--header-color);
+    color: var(--header-color);
+    background-color: transparent;
     font-size: 2.3em;
     font-weight: bolder;
 }
 
 .nav__ul--link:hover {
     border-bottom: 1px solid var(--primary-color);
+}
+
+@media screen and (min-width: 768px) {
+    .nav {
+        left: 70%;
+        width: 30%;
+    }
+
+    .nav__ul--link {
+        font-size: 1.5em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .nav {
+        left: 85%;
+        width: 15%;
+    }
+
+    .nav__ul--link {
+        font-size: 1.8em;
+    }
 }
